# tqdb

./: .gitignore  BUG_FIX_SYMBOL_LIST.md  CASSANDRA_VERSION_UPDATE.md  CHANGELOG_CASSANDRA.md  CLUSTER_QUICK_START.md  COMPREHENSIVE_SCAN_RESULTS.md  CentOS_7.md  DOCKER_CASSANDRA.md  DOCKER_CLUSTER_DEPLOYMENT.md  FAULT_TOLERANCE.md  FAULT_TOLERANCE_QUICK_REF.txt  FAULT_TOLERANCE_SUMMARY.md  MISSING_SHELL_SCRIPTS_FIX.md  OPERATIONS.md  README.md  REFACTOR_PLAN.md  SCHEMA_MIGRATION_SUMMARY.md  SCHEMA_VERSIONS.md  WEB_CONTAINERIZATION_PLAN.md  cluster.env.template  deploy-cluster.sh  docker-compose.cluster.yml  docker-compose.main.yml  docker-compose.yml
.github/: copilot-instructions.md
cluster-init-scripts/: init-cluster-schema-v4.cql  init-cluster-schema.cql  init-main-schema-v4.cql  init-main-schema.cql
crypto/: pyproject.toml
crypto/bybit/: .env.example  docker-compose.yml  http_client.py  legacy_casandra_backfill.py
crypto/bybit/backfill/: Dockerfile  README.md  api.py  cassandra_client.py  jobs.py  kline_sync.py  main.py  symbols.py
docs/: CONTINUOUS_SYMBOL_REQUEST_LIFECYCLE.md  Q1MIN_REQUEST_LIFECYCLE.md  README.md
init-scripts/: init-schema.cql
script_for_sys/: profile_tqdb.sh  tqdb.env  tqdbStartup.sh  tqdbStartup_systemd.sh  tqdbStop.sh
temp/: cgi_urls_for_compatibility.txt  complete_url_compatibility.txt
tools/: MIGRATION_GUIDE.md  Min2Cass.py  Min2Day.py  REFACTORED_README.md  SYMBOL_CONFIG.md  Sym2Cass.py.copy  TQALERT_CONFIG.md  (+4 more)
tws_worker/: Dockerfile  README.md  config.yaml  docker-compose.yml  kline_fetcher.py  main.py  pyproject.toml
(+146 files in other folders)
